...
    android:layout_height="110dp"
    android:background="#E0F5FF"
    card_view:cardCornerRadius="4dp"
    card_view:cardPreventCornerOverlap="false">

    <TextView
        android:id="@+id/post_text_field"
        android:layout_width="249dp"
        android:layout_height="54dp"
        android:maxLines="2"
        android:textSize="16sp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.313"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintVertical_bias="0.285" />

    <CheckBox
        android:id="@+id/bookmark_checkbox"
        android:layout_width="33dp"
        android:layout_height="32dp"
        android:accessibilityLiveRegion="polite"
        android:button="@android:drawable/btn_star"
        android:drawablePadding="0dp"
        card_view:layout_constraintEnd_toEndOf="parent"
...
