<resources>
    <string name="app_name">Pangea</string>
    <string name="facebook_app_id">171191854853298</string>
    <string name="fb_login_protocol_scheme">fb171191854853298</string>

    <string name="accounts_tab">Accounts tab</string>
    <!--- Warning: The tab names declared here are irrelevant! -->
    <!--- The visible names are set in SwitchAdapter.kt -> tabNames[] -->
    <string name="ACCOUNTS">ACCOUNTS</string>
    <string name="POSTS">POSTS</string>
    <string name="BOOKMARKED">BOOKMARKED</string>
    <!--- -->
    <string name="all_accounts">All Accounts</string>
    <string name="all_posts">All Posts</string>
    <string name="all_bookmarked">All Bookmarked</string>
    <string name="dashboard">Dashboard</string>
    <string name="test_button">test button</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>

    <!-- Strings related to login/logout -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_title">Register or Login</string>
    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_logout">Logout</string>

    <!-- Strings related to twitter -->
    <string name="twitter_link_text">Login with Twitter</string>
    <string name="twitter_unlink_text">Unlink twitter account</string>

    <!-- Strings related to twitter -->
    <string name="facebook_link_text">Login with Facebook</string>
    <string name="facebook_unlink_text">Unlink facebook account</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="password_header">Password</string>
    <string name="language_header">Language</string>
    <string name="theme_header">App Theme</string>


    <!-- Password Preferences -->
    <string name="change_password_title">Change password</string>
    <string name="change_language_title" />
    <string name="change_theme_title">Enable Dark-Mode</string>


    <!-- Posts strings -->
    <string name="post_message">post message</string>
    <string name="send">send</string>
    <string name="refresh">Refresh</string>
    <string name="Attach">Attach</string>
    <string name="filter_posts_header">Filter Posts</string>
    <string name="filter_by_content_header">Filter by Content</string>
    <string name="filter_by_date_header">Filter by Date</string>
    <string name="filter_by_platform_header">Filter by Platform</string>
    <string name="btn_apply_filter">Apply Filter</string>
    <string name="disconnect_button">Disconnect</string>

    <!-- Feedback -->
    <string name="fb_likes">Likes on Facebook</string>
    <string name="retweets">Retweets on Twitter</string>

</resources>