...
        app:titleTextColor="@color/white" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/ViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/dashboard_bar"
        android:layout_above="@id/dashboard_bar"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/dashboard_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
