<resources>
    <!-- Reply Preference -->
    <string-array name="reply_entries">
        <item>Reply</item>
        <item>Reply to all</item>
    </string-array>

    <string-array name="reply_values">
        <item>reply</item>
        <item>reply_all</item>
    </string-array>

    <string-array name="language_values">
        <item>English</item>
        <item>Russian</item>
    </string-array>

    <string-array name="language_keys">
        <item>en</item>
        <item>ru</item>
    </string-array>
</resources>